# CoPaw

./: .gitignore  pyproject.toml
adbpg-memory-cli/: README.md  SKILL.md  TEST_PLAN.md
adbpg-memory-cli/Copaw/: SKILL.md  集成指南.md
adbpg-memory-cli/docs/: README.md  skill-craft评测经验总结.md
adbpg-memory-cli/evals/: evals.json  trigger_evals.json
adbpg-memory-cli/examples/saas-ecommerce/: README.md  SKILL.md
adbpg-memory-cli/node/: package-lock.json  package.json
adbpg-memory-cli/node/src/: agent-config.js  agent-config.test.js  cli.js  client.js  client.test.js  config.js  config.test.js  cross-impl.test.js  index.js  output.js  output.test.js
adbpg-memory-cli/python/: README.md  pyproject.toml
adbpg-memory-cli/python/src/adbpg_memory_cli/: agent_config.py  cli.py  client.py  config.py  output.py
adbpg-memory-cli/python/tests/: test_agent_config.py  test_behavioral_parity.py  test_cli.py  test_cli_properties.py  test_client.py  test_client_properties.py  test_config.py  test_config_properties.py  test_cross_impl.py  test_output.py  test_output_properties.py
adbpg-memory-cli/scripts/: adbpg-mem.mjs  adbpg-mem.test.mjs
adbpg-memory-cli/shared/: agent-config-schema.json  config-schema.json  config.example.rest.json  config.example.sql.json
adbpg-memory-cli/wukong/adbpg-memory-skill-pkg/: SKILL.md
adbpg-memory-cli/wukong/docs/: skill-craft评测经验总结.md  对接Wukong.md
console/src/locales/: en.json  ja.json  pt-BR.json  ru.json  zh.json
src/copaw/agents/: command_handler.py  react_agent.py
src/copaw/config/: config.py
src/qwenpaw/config/: config.py
(+485 files in other folders)
